[project]
name = "name-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19.1",
    "huggingface-hub>=1.20.1",
    "ipykernel>=7.3.0",
    "networkx>=3.6.1",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=5.12.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu128"
default = false
